--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,6 +4,12 @@
     font-size: 18px;
     border: 1px;
 }
+.info {
+    color: green;
+    margin: 10px 0;
+    font-size: 14px;
+    border: 1px;
+}
 /*Стиль таблицы*/
 table {
     font-family: arial, sans-serif;
@@ -18,3 +24,43 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+
+/*Уведомления*/
+.notification-container {
+    position: relative;
+}
+.bell {
+    cursor: pointer;
+    font-size: 24px;
+}
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 5px;
+}
+.dropdown {
+    position: absolute;
+    top: 30px; /* корректируйте по мере необходимости */
+    right: 0;
+    background: white;
+    border: 1px solid #ccc;
+    width: 300px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+.dropdown ul {
+    list-style: none;
+    padding: 0;
+}
+.dropdown li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+.dropdown li:hover {
+    background-color: #f0f0f0;
+}
+
