--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -145,4 +145,9 @@ tr:nth-child(even) {
     max-width: 90%;
     max-height: 90%;
 }
-
+.avatar{
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
