--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,13 +64,7 @@
     flex-direction: column;
     height: 100%;
 }
-
-/*Непрочитанные комментарии*/
-.new-comment {
-    background-color: white;
-    color: black;
-    border: 2px solid #008CBA;
-}
+/*Модальные окна*/
 .modal {
     display: none;
     position: fixed;
@@ -114,18 +108,6 @@
 .commentsList {
     display: flex;
     flex-direction: column;
-}
-.comment {
-    background-color: #636977;
-    border: 1px solid #01342d;
-    color: ghostwhite;
-    align-self: flex-start;
-}
-.author-comment {
-    background-color: #e0f7fa;
-    border: 1px solid #009688;
-    margin-left: auto;
-    align-self: flex-end;
 }
 .avatar {
     width: 150px;
